added checkers behind background

--- a/public/global.css
+++ b/public/global.css
@@ -40,3 +40,14 @@ body {
 ::-webkit-scrollbar-track {
 	background: var(--panel);
 }
+
+.checkers {
+	--checker-color-1: white;
+	--checker-color-2: lightgrey;
+	--checker-size: 8px;
+	--checker-gradient: linear-gradient(45deg, var(--checker-color-1) 25%, transparent 0%, transparent 75%, var(--checker-color-1) 75%);
+	background-color: var(--checker-color-2);
+	background-image: var(--checker-gradient), var(--checker-gradient);
+	background-position: 0 0, var(--checker-size) var(--checker-size);
+	background-size: calc(var(--checker-size) * 2) calc(var(--checker-size) * 2);
+}
