--- a/public/global.css
+++ b/public/global.css
@@ -1,23 +1,38 @@
+/* Dark theme */
 :root {
-	--nav-background: #1c1b22;
+	--radius: 6px;
+	--grid-gap: 4px;
+	--nav-height: 40px;
 
-	--panel: #2d2d2f;
-
-	--title-color: #ffffff;
-	--text-color: #ffffff;
-
-	--off-white: #a1a1a1;
-	--off-white: #f1f1f1;
-
+	--nav: #1b1b1d;
+	--panel: #262628;
+	--title: #ffffff;
+	--text: #ffffff;
+	--icon: #f1f1f1;
+	--border: #42414d;
 	--accent: #1a83ee;
 	--hover: #34343a;
-	--selected: #42414d;
-
+	--selected: #3a3943;
 	--invalid: #6f3939;
+	--shadow: none;
+	--background: #404040;
+}
 
+/* Light Theme */
+:root {
+	--nav: #e7e7e7;
+	--panel: #e2e2e2;
+	--title: #000000;
+	--text: #070707;
+	--icon: #353535;
+	--accent: #1a83ee;
+	--border: #858585;
+	--hover: #b5b5b5;
+	--selected: #c5c5c5;
+	--invalid: #ce7676;
 	--shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
-
-	--nav-height: 40px;
+	--background: rgb(255, 255, 255);
+	scrollbar-width: thin;
 }
 
 html,
@@ -26,13 +41,13 @@ body {
 	margin: 0;
 	height: 100vh;
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-	background: var(--off-white);
+	background: var(--icon);
 	overflow: hidden;
 	font-weight: 200;
 }
 
 ::-webkit-scrollbar {
-	width: 10px;
+	width: 6px;
 	height: 5px;
 }
 ::-webkit-scrollbar-thumb {
