Added missing color formats

--- a/public/global.css
+++ b/public/global.css
@@ -21,7 +21,7 @@
 /* Light Theme */
 :root.light {
 	--nav: #e7e7e7;
-	--panel: #e2e2e2;
+	--panel: #f4f4f4;
 	--title: #000000;
 	--text: #070707;
 	--icon: #353535;
