fixed 0 width elements again

--- a/public/global.css
+++ b/public/global.css
@@ -46,6 +46,11 @@ body {
 	font-weight: 200;
 }
 
+a {
+	color: var(--text);
+	text-decoration: none;
+}
+
 ::-webkit-scrollbar {
 	width: 6px;
 	height: 5px;
