updated look to index page and added control mirror options

--- a/public/global.css
+++ b/public/global.css
@@ -51,6 +51,13 @@ a {
 	text-decoration: none;
 }
 
+button {
+	border: none;
+	border-radius: var(--radius);
+}
+button:hover {
+	background: var(--hover);
+}
 ::-webkit-scrollbar {
 	width: 6px;
 	height: 5px;
