--- a/public/global.css
+++ b/public/global.css
@@ -45,7 +45,7 @@ body {
 	margin: 0;
 	height: 100vh;
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-	background-color: var(--background);
+	background: var(--background);
 	overflow: hidden;
 	font-weight: 200;
 }
@@ -58,9 +58,7 @@ a {
 button {
 	border: none;
 	border-radius: var(--radius);
-}
-button:hover {
-	background-color: var(--hover);
+	background: var(--hover);
 }
 ::-webkit-scrollbar {
 	width: 6px;
@@ -68,10 +66,10 @@ button:hover {
 }
 ::-webkit-scrollbar-thumb {
 	border-radius: 7px;
-	background-color: grey;
+	background: grey;
 }
 ::-webkit-scrollbar-track {
-	background-color: var(--panel);
+	background: var(--panel);
 }
 
 .checkers {
@@ -79,8 +77,62 @@ button:hover {
 	--checker-color-2: lightgrey;
 	--checker-size: 8px;
 	--checker-gradient: linear-gradient(45deg, var(--checker-color-1) 25%, transparent 0%, transparent 75%, var(--checker-color-1) 75%);
-	background-color: var(--checker-color-2);
+	background: var(--checker-color-2);
 	background-image: var(--checker-gradient), var(--checker-gradient);
 	background-position: 0 0, var(--checker-size) var(--checker-size);
 	background-size: calc(var(--checker-size) * 2) calc(var(--checker-size) * 2);
+}
+
+.property-container {
+	padding: 10px 0;
+}
+.property-heading {
+	display: grid;
+	grid-template-columns: 1fr 30px;
+	padding: 0 10px 5px 10px;
+	gap: 5px;
+}
+h4 {
+	cursor: default;
+	margin: 0;
+	padding: 5px 0;
+	font-weight: 300;
+	color: var(--text);
+}
+
+.checker-background {
+	margin: auto;
+	width: 1.5em;
+	height: 1.5em;
+	background: lightgrey;
+	background-image: linear-gradient(45deg, white 25%, transparent 0%, transparent 75%, white 75%), linear-gradient(45deg, white 25%, transparent 0%, transparent 75%, white 75%);
+	background-position: 0 0, 0.3em 0.3em;
+	background-size: calc(0.3em * 2) calc(0.3em * 2);
+}
+.property-color {
+	position: absolute;
+	width: 1.5em;
+	height: 1.5em;
+	box-shadow: var(--text) 0px 0px 2px -1px;
+	transition: none;
+}
+.property-row {
+	padding: 0 10px 0 5px;
+	display: grid;
+	grid-template-columns: min-content max-content 1fr 30px 30px;
+	gap: 5px;
+	line-height: 28px;
+}
+.property-minus {
+	width: 100%;
+	height: 100%;
+	margin: auto;
+	border-radius: 6px;
+}
+.property-minus svg {
+	height: 100%;
+	width: 100%;
+}
+.property-minus:hover {
+	background: var(--hover);
 }
