fixed some lighthouse things

--- a/public/global.css
+++ b/public/global.css
@@ -3,48 +3,36 @@
 	--radius: 6px;
 	--gap: 4px;
 	--nav-height: 40px;
-
 	--nav: #202021;
+	--accent: #47a2ff;
+
 	--toolbar: #1b1b1d;
 	--panel: #222222;
 	--title: #ffffff;
 	--text: #ffffff;
 	--icon: #f1f1f1;
 	--border: #42414d;
-	--accent: #1a83ee;
 	--hover: #34343a;
 	--selected: #3a3943;
 	--invalid: #6f3939;
 	--shadow: none;
 	--background: #181717;
-
-	--panel: #262628;
-	--title: #ffffff;
-	--text: #ffffff;
-	--icon: #f1f1f1;
-	--border: #42414d;
-	--accent: #1a83ee;
-	--hover: #34343a;
-	--selected: #3a3943;
-	--invalid: #6f3939;
+	scrollbar-width: thin;
 }
 
 /* Light Theme */
 :root.light {
-	--nav: #202021;
 	--toolbar: #e7e7e7;
 	--panel: #f4f4f4;
 	--title: #000000;
 	--text: #070707;
 	--icon: #353535;
-	--accent: #1a83ee;
 	--border: #858585;
 	--hover: #b5b5b5;
 	--selected: #c5c5c5;
 	--invalid: #ce7676;
 	--shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
 	--background: rgb(255, 255, 255);
-	scrollbar-width: thin;
 }
 /* 
 * {
